# course-project

./: .gitignore  README.md  compose.yml  ruff.toml
.bruno_api/api_test/: bruno.json  collection.bru
.bruno_api/api_test/authorization/: folder.bru
.bruno_api/api_test/bookshop/: AuthorsCheck.bru  BooksCheck.bru  CategoriesCheck.bru  FILL_BOOK_DATABASE_TEST.bru  folder.bru
.bruno_api/api_test/chat/: folder.bru
backend/: compose.yml
backend/auth_service/: .env  Dockerfile  pyproject.toml
backend/auth_service/app/: exceptions.py  main.py  middleware.py  utils.py
backend/auth_service/app/api/: routes.py  service.py
backend/auth_service/app/core/: config.py  database.py  security.py
backend/auth_service/app/migrations/: env.py
backend/auth_service/app/migrations/versions/: 507925b4b979_user_created.py
backend/auth_service/app/repository/: models.py  repository.py  schemas.py
backend/book-service/app/: exceptions.py  (+2 more)
backend/book_service/: alembic.ini  pyproject.toml
backend/chat_service/: pyproject.toml
backend/chat_service/app/: exceptions.py  main.py  middleware.py  utils.py
backend/chat_service/app/api/: routes.py  services.py
backend/chat_service/app/core/: config.py  database.py
backend/chat_service/app/migrations/: env.py
backend/chat_service/app/migrations/versions/: 331cfe616cb3_db_structure_init.py
backend/chat_service/app/repository/: models.py  repository.py  schemas.py
frontend/: .prettierignore  Dockerfile  package-lock.json  package.json  prettierrc.json  tsconfig.app.json  tsconfig.json
frontend/src/: App.vue  main.ts
(+38 files in other folders)
